Fixing selected email z-index so it flows into the full email view hiding the border

--- a/web-ui/app/scss/styles.scss
+++ b/web-ui/app/scss/styles.scss
@@ -156,6 +156,7 @@
       }
       &.selected {
         background: #FFF;
+        z-index: 3;
         a {
           color: #333;
         }
